Align embed defaults with new FAQ

--- a/scripts/config-ui/index.html
+++ b/scripts/config-ui/index.html
@@ -13674,19 +13674,23 @@ Check console for full details.`;
                 } else {
                     // Default suggestions
                     embedSuggestions = [
-                        "What can you help me with?",
-                        "How does this work?",
-                        "Tell me about your features",
-                        "Get started guide"
+                        "Who created ChatRAG?",
+                        "How many chatbots can I build with ChatRAG?",
+                        "Do I own the chatbots I create?",
+                        "Can I build a business on top of ChatRAG?",
+                        "What's included in the Starter vs Complete plans?",
+                        "How do I connect WhatsApp and other channels?"
                     ];
                 }
             } catch (e) {
                 console.error('Failed to parse NEXT_PUBLIC_EMBED_SUGGESTIONS:', e);
                 embedSuggestions = [
-                    "What can you help me with?",
-                    "How does this work?",
-                    "Tell me about your features",
-                    "Get started guide"
+                    "Who created ChatRAG?",
+                    "How many chatbots can I build with ChatRAG?",
+                    "Do I own the chatbots I create?",
+                    "Can I build a business on top of ChatRAG?",
+                    "What's included in the Starter vs Complete plans?",
+                    "How do I connect WhatsApp and other channels?"
                 ];
             }
             
